# fb_stats_bot

./: .cursorignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_SETUP.md  DEPLOYMENT_READY.txt  DIGITALOCEAN_PRODUCTION_SETUP.md  DIGITALOCEAN_SETUP.md  Dockerfile  Makefile  PRODUCTION_DEPLOYMENT.md  QUICK_SETUP_STEPS.md  QUICK_START.md  README.md  RESTORE_INSTRUCTIONS.md  access_control_implementation_plan.md  alembic.ini  architecture.md  bot_control.sh  bot_log.txt  botfather_commands.txt  check_user_accounts.py  database_dev.sqlite  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.staging.yml  docker-compose.yml  env-production.template  error_handling_refactoring_plan.md  fix_accounts_to_users.py  fix_user.py  initialize_db.py  interfaces_and_types_refactoring_plan.md  kill_all_bots.sh  localization_refactoring_plan.md  main.py  main_production.py  main_simple.py  main_stable.py  migration_add_permissions_and_accounts_to_users.py  (+25 more)
.cursor/rules/: coding-pattern-preferences.mdc  my-stack.mdc  (+2 more)
alembic/: env.py
config/: .env  .env.dev  .env.test  __init__.py  settings.py
docs/: GIT-WORKFLOW.md
migrations/: migrate_schema.py  migrate_users.py  test_db_structure.py  test_user_migration.py  user_roles_config.example.json
monitoring/: alert_rules.yml  prometheus.yml
scripts/: backup.sh  check_server_logs.sh  deploy.sh  pre_deploy_check.sh  quick_test.sh  remote_diagnostics.sh  setup_digitalocean.sh
src/: index.js
tests/: __init__.py  conftest.py  run_tests.py  test_environments.py  test_health.py
tools/: git-workflow.sh
(+166 files in other folders)
