[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Per-module options
[[tool.mypy.overrides]]
module = "src.api.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "src.bot.types"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Exclude generated code or external modules
[[tool.mypy.overrides]]
module = [
    "config.*",
    "src.storage.models"
]
ignore_errors = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 100
target-version = ["py310"] 